# new_project_template

./: .gitignore  README.md  init.sh  pyproject.toml
my_project/: __init__.py  app.py
my_project/core/: example.py
my_project/web/elements/greeter/: index.js
my_project/web/styles/: style.css
my_project/web/views/: about.html  index.html
templates/: about.html  index.html
