[project]
name = "my-project"
version = "0.1.0"
description = "A new project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "refract @ git+https://github.com/Brunvelop/refract",
    "autocode @ git+https://github.com/Brunvelop/autocode.git",
]

[project.scripts]
my-project = "my_project.app:app.run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["my_project"]

[tool.codehealth]
critical_mi = 20.0
warning_mi = 40.0
critical_function_cc = 25
warning_function_cc = 15
critical_nesting = 8
warning_nesting = 5
critical_file_sloc = 1000
warning_file_sloc = 500
max_rank_f_functions = 0
max_circular_deps = 0
exclude = ["tests/*"]
